# fourierflow

./: .gitignore  .gitmodules  .pydocstylerc  LICENSE  README.md  environment.yml  example.env  poetry.toml  pyproject.toml  setup.py
configs/01_sine/: confg.yaml
configs/01c_smallest/: confg.yaml
configs/02_sine_complex/: confg.yaml
configs/20_burgers/: confg.yaml
configs/30_forecast_nbeats/: confg.yaml
configs/32_forecast_cde_decoder/: confg.yaml
configs/33_forecast_fourier_nbeats/: confg.yaml
configs/41_navier_stokes_2d_baseline/: config.yaml
configs/50_nbeats_vevo/: config.yaml
configs/52_vevo_fourier/: config.yaml
configs/53_nbeats_vevo_full/: config.yaml
configs/54_vevo_perceiver/: config.yaml
configs/55_vevo_radflow/: config.yaml
configs/55a_copy_baseline/: config.yaml
configs/55b_vevo_radflow_shorter/: config.yaml
configs/burgers-256/01_li_baseline/: config.yaml
configs/burgers-256/02_best_large/: config.yaml
configs/burgers-256/04_li_layers_12/: config.yaml
configs/navier_stokes_4/19_norm/: config.yaml
docs/: maintenance.md
experiments/50_nbeats_vevo/: config.yaml
experiments/51_vevo_copy_previous_day/: config.yaml
experiments/52_vevo_fourier/: config.yaml
experiments/53_nbeats_vevo_full/: config.yaml
expt/01_sine/: confg.yaml
expt/01_sine_nodep/: confg.yaml
expt/02_sine_complex/: confg.yaml
expt/10_cde_classification/: confg.yaml
expt/20_burgers/: confg.yaml
expt/30_forecast_nbeats/: confg.yaml
expt/31_forecast_cde/: confg.yaml
expt/32_forecast_cde_decoder/: confg.yaml
expt/33_forecast_fourier_nbeats/: confg.yaml
fourier/: fourier_1d.py
fourierflow/: __init__.py
fourierflow/builders/: __init__.py  airfoil.py  base.py  burgers.py  cylinder_flow.py  cylinder_flow_2.py  darcy_flow.py  elasticity.py  kolmogorov.py  navier_stokes.py  navier_stokes_2.py  navier_stokes_3.py  navier_stokes_4.py  ns_contextual.py  ns_markov.py  ns_zongyi.py  plasticity.py  sine.py  speech_commands.py  structured_mesh_2d.py  utils.py  vevo.py
fourierflow/callbacks/: __init__.py  callback.py  model_checkpoint.py  stochastic_weight_averaging.py  wandb_logger.py
fourierflow/commands/: __main__.py  convert.py  download.py  generate.py  infer.py  jax.py  mesh.py  plot.py  predict.py  sample.py  test.py  train.py  utils.py
fourierflow/common/: __init__.py  registry.py
fourierflow/datasets/: __init__.py  base.py  boucing_ball.py  burgers.py  character.py  hafner.py  oscillation.py  sine.py  spiral.py
fourierflow/datastores/: __init__.py  burgers.py  cylinder_flow.py  darcy_flow.py  navier_stokes.py  navier_stokes_2.py  navier_stokes_3.py  sine.py  speech_commands.py  vevo.py
fourierflow/experiments/: __init__.py  cde.py  forecaster_cde.py  forecaster_cde_decoder.py  forecaster_nbeats.py  fourier.py  fourier_1d_burgers.py  fourier_2d.py  fourier_2d_darcy.py  fourier_2d_deq.py  fourier_2d_parallel.py  fourier_2d_parellel.py  fourier_2d_scales.py  fourier_2d_single.py  mesh_cfd.py  mesh_fourier.py  mesh_hilbert.py  nbeats.py  nodep.py  radflow.py  viz.py
fourierflow/modules/: __init__.py  attention.py  dct.py  decoders.py  encoders.py  feedforward.py  fnet.py  fno_factorized_2d.py  fno_factorized_mesh_2d.py  fno_factorized_mesh_2d_airfoil.py  fno_factorized_mesh_full_2d.py  fno_factorized_point_cloud_2d.py  fno_mesh_2d.py  fno_mesh_2d_airfoil.py  fno_plus_2d.py  fno_point_cloud_2d.py  fourier.py  fourier_1d.py  fourier_1d_factorized.py  fourier_2d.py  fourier_2d_factorized.py  fourier_2d_factorized_parallel.py  fourier_2d_full.py  fourier_2d_int.py  fourier_2d_real.py  fourier_2d_shared.py  fourier_2d_split.py  fourier_deq.py  fourier_deq_full.py  hilbert.py  iphi.py  linear.py  mesh_fourier.py  nbeats.py  normalizer.py  perceiver.py  position.py  processes.py  radflow.py  radflow_attention.py  (+3 more)
fourierflow/optimizers/: __init__.py  adamw.py
fourierflow/registries/: __init__.py  builders.py  callbacks.py  experiment.py  experiments.py
fourierflow/registry/: callbacks.py  datastore.py  experiment.py  module.py  scheduler.py
fourierflow/routines/: __init__.py  base.py  fourier_2d.py  fourier_2d_single.py  geo_2d.py  geo_2d_airfoil.py  grid_2d_markov.py  grid_2d_rollout.py  learned_interpolator.py  mesh_torch.py  meshgraphnet.py  meshgraphnet_jax.py  point_cloud.py  structured_mesh.py
fourierflow/schedulers/: __init__.py  cosine_with_warmup.py  exponential_with_warmup.py  linear_with_warmup.py  schedulers.py  swa.py
fourierflow/trainers/: __init__.py  jax_callback_hook.py  jax_trainer.py
fourierflow/utils/: __init__.py  array.py  equations.py  exceptions.py  forcings.py  logger.py  parsing.py  path.py  stats.py
fourierflow/viz/: __init__.py  heatmap.py
meshgraphnets/: cfd_eval.py  cfd_model.py  cloth_eval.py  cloth_model.py  common.py  core_model.py  dataset.py  normalization.py  plot_cloth.py  pyproject.toml  run_model.py  start_gadi_job.sh
rivernet/: __init__.py
rivernet/commands/: __main__.py
rivernet/common/: __init__.py  registry.py
rivernet/datasets/: __init__.py  exp.py  linear.py  lotka_voltera.py  mnist.py  sine.py
rivernet/datastores/: __init__.py  base.py  navier_stokes.py  sine.py  vevo.py
rivernet/experiments/: __init__.py  base.py  cde.py  forecaster_cde.py  forecaster_cde_decoder.py  forecaster_nbeats.py  fourier.py  fourier_2d.py  nbeats.py  nodep.py  radflow.py
rivernet/modules/: __init__.py  base.py  decoders.py  encoders.py  fourier.py  fourier_2d.py  loss.py  nbeats.py  nodep.py  perceiver.py  processes.py  radflow.py  rotary.py
rivernet/systems/: __init__.py  base.py  cde.py  forecaster_cde.py  forecaster_cde_decoder.py  forecaster_nbeats.py  fourier.py  fourier_2d.py  nbeats.py  nodep.py  viz.py
rivernet/utils/: __init__.py  helpers.py
scripts/: datasets.py  generate_on_gadi.sh  generate_on_gadi_1.sh  generate_on_gadi_4.sh  models.py  plot_figures.py  run_all.sh  start_gadi_job.sh  train.py  train_fourier_1d.py  train_nbeats.py  train_nbeats_nodep.py  train_nbeats_ode.py  train_waves.py  train_waves_rnn.py  viz.py
tests/: test_conversions.py
tests/modules/: test_sphara.py
(+885 files in other folders)
