[tool.poetry]
name = "fourierflow"
version = "0.3.0"
description = "Experiments with Fourier layers on simulation data."
authors = ["Alasdair Tran <alasdair.tran@anu.edu.au>"]
repository = "https://github.com/alasdairtran/fourierflow"

[tool.poetry.dependencies]
python = "~3.9.10"
# poetry add bokeh dask-cuda dm-haiku einops elegy entmax gdown gin-config \
#   graphviz h5netcdf hydra-core hyperopt ipykernel jupyterlab \
#   git+https://github.com/google/jax-cfd.git@9ce255b38f7fce8f58298862134cbe90b74fef10 \
#   matplotlib numpy pandas plotly poethepoet ptvsd pydocstyle \
#   python-dotenv pytorch-lightning requests rich seaborn termcolor \
#   tensorflow-gpu tfrecord torchdiffeq torchtyping typer wandb xarray
bokeh = "^2.4.2"
dask-cuda = "^21.12.0"
dm-haiku = "^0.0.5"
einops = "^0.3.2"
elegy = "^0.8.4"
entmax = "^1.0"
gdown = "^4.2.0"
gin-config = "^0.5.0"
graphviz = "^0.19.1"
h5netcdf = "^0.12.0"
hydra-core = "^1.1.1"
hyperopt = "^0.2.7"
ipykernel = "^6.6.0"
jupyterlab = "^3.2.5"
jax = "^0.2.27"
jax-cfd = {git = "https://github.com/google/jax-cfd.git", rev = "9ce255b38f7fce8f58298862134cbe90b74fef10"}
# Replace wheel URLs with versions once jaxlib is PEP 503 compliant:
# https://github.com/google/jax/issues/5410
jaxlib = [
    {url = "https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.1.75+cuda11.cudnn82-cp39-none-manylinux2010_x86_64.whl", markers = "sys_platform == 'linux'"},
    {url = "https://storage.googleapis.com/jax-releases/mac/jaxlib-0.1.75-cp39-none-macosx_10_9_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"},
    {url = "https://storage.googleapis.com/jax-releases/mac/jaxlib-0.1.75-cp39-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
]
matplotlib = "^3.5.1"
numpy = "^1.20.3"
pandas = "^1.3.5"
plotly = "^5.5.0"
poethepoet = "^0.11.0"
ptvsd = "^4.3.2"
pydocstyle = "^6.1.1"
python-dotenv = "^0.19.2"
pytorch-lightning = "^1.5.9"
requests = "^2.26.0"
rich = "^10.16.1"
seaborn = "^0.11.2"
termcolor = "^1.1.0"
tensorflow = { version = "^2.7.0", markers = "sys_platform == 'darwin'" }
tensorflow-gpu = { version = "^2.7.0", markers = "sys_platform == 'win32' or sys_platform == 'linux'" }
tfrecord = "^1.14.1"
# Note that we need to specify the exact version of pytorch, otherwise
# torch-1.10.1+rocm will be installed instead :-/
torch = [
    {version = "1.10.1+cu113", source = "torch", markers = "sys_platform == 'linux' or sys_platform == 'win32'"},
    {version = "1.10.1", source = "torch", markers = "sys_platform == 'darwin'"},
]
torchdiffeq = "^0.2.2"
torchtyping = "^0.1.4"
typer = "^0.4.0"
wandb = "^0.12.9"
xarray = "^0.20.2"

[tool.poetry.dev-dependencies]
# poetry add --dev autopep8 ipympl isort mypy pylint pytest types-requests
autopep8 = "^1.6.0"
ipympl = "^0.8.4"
isort = "^5.10.1"
mypy = "^0.930"
pylint = "^2.12.2"
pytest = "^6.2.5"
types-requests = "^2.26.3"

# Remove once pytorch is PEP 503 compliant:
# https://github.com/pytorch/pytorch/issues/25639#issuecomment-946224563
[[tool.poetry.source]]
name = "torch"
url = "https://eternalphane.github.io/pytorch-pypi/"
secondary = true

[tool.poetry.scripts]
fourierflow = 'fourierflow.commands.__main__:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint.messages_control]
disable = [
    "cyclic-import", # disabled until https://github.com/PyCQA/pylint/issues/3525 is fixed
    "invalid-name",
    "logging-fstring-interpolation", # f-strings are faster
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-return",
    "no-member",
    "no-self-argument",
    "no-self-use",
    "redefined-builtin",
    "too-few-public-methods",
    "unused-argument",
]

[tool.pylint.similarities]
# Minimum lines number of a similarity.
min-similarity-lines = 5
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.isort]
src_paths = ["fourierflow"]
