[tool.poetry]
name = "fourierflow"
version = "0.3.0"
description = "Experiments with Fourier layers on simulation data."
authors = ["Alasdair Tran <alasdair.tran@anu.edu.au>"]
repository = "https://github.com/alasdairtran/fourierflow"

[tool.poetry.dependencies]
python = "~3.10.3"
# poetry add bokeh dm-haiku einops entmax gdown gin-config \
#   graphviz h5netcdf hydra-core hyperopt ipykernel jupyterlab \
#   matplotlib numpy pandas plotly poethepoet ptvsd pydocstyle \
#   python-dotenv pytorch-lightning requests rich seaborn termcolor \
#   tfrecord torchdiffeq torchtyping typer wandb xarray
bokeh = "^2.4.2"
dm-haiku = "^0.0.6"
einops = "^0.4.1"
entmax = "^1.0"
gdown = "^4.4.0"
gin-config = "^0.5.0"
graphviz = "^0.19.1"
h5netcdf = "^0.15.0"
hydra-core = "^1.1.1"
hyperopt = "^0.2.7"
ipykernel = "^6.9.2"
jax = "^0.3.4"
jax-cfd = {git = "https://github.com/google/jax-cfd.git", rev = "f8eec9d0f20818d7708a91b78852e9299fc05c5c"}
# Replace wheel URLs with versions once jaxlib is PEP 503 compliant:
# https://github.com/google/jax/issues/5410
jaxlib = [
    {url = "https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.3.2+cuda11.cudnn82-cp310-none-manylinux2010_x86_64.whl", markers = "sys_platform == 'linux'"},
    {url = "https://storage.googleapis.com/jax-releases/mac/jaxlib-0.3.2-cp310-none-macosx_10_9_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"},
    {url = "https://storage.googleapis.com/jax-releases/mac/jaxlib-0.3.2-cp310-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
]
jupyterlab = "^3.3.2"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
pandas = "^1.4.1"
plotly = "^5.6.0"
poethepoet = "^0.13.1"
ptvsd = "^4.3.2"
pydocstyle = "^6.1.1"
python-dotenv = "^0.19.2"
pytorch-lightning = "^1.5.10"
requests = "^2.27.1"
rich = "^12.0.1"
seaborn = "^0.11.2"
tensorflow = { version = "^2.8.0", markers = "sys_platform == 'darwin'" }
tensorflow-gpu = { version = "^2.8.0", markers = "sys_platform == 'win32' or sys_platform == 'linux'" }
termcolor = "^1.1.0"
tfrecord = "^1.14.1"
# Note that we need to specify the exact version of pytorch, otherwise
# torch-1.10.2+rocm will be installed instead :-/
torch = [
    {version = "1.11.0+cu115", source = "torch", markers = "sys_platform == 'linux' or sys_platform == 'win32'"},
    {version = "1.11.0", source = "torch", markers = "sys_platform == 'darwin'"},
]
torchdiffeq = "^0.2.2"
torchtyping = "^0.1.4"
typer = "^0.4.0"
wandb = "^0.12.11"
xarray = "^2022.3.0"

[tool.poetry.dev-dependencies]
# poetry add --dev autopep8 ipympl isort mypy pylint pytest types-requests
autopep8 = "^1.6.0"
ipympl = "^0.8.8"
isort = "^5.10.1"
mypy = "^0.941"
pylint = "^2.12.2"
pytest = "^7.1.1"
types-requests = "^2.27.14"

# Remove once pytorch is PEP 503 compliant:
# https://github.com/pytorch/pytorch/issues/25639#issuecomment-946224563
[[tool.poetry.source]]
name = "torch"
url = "https://eternalphane.github.io/pytorch-pypi/"
secondary = true

[tool.poetry.scripts]
fourierflow = 'fourierflow.commands.__main__:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint.messages_control]
disable = [
    "cyclic-import", # disabled until https://github.com/PyCQA/pylint/issues/3525 is fixed
    "invalid-name",
    "logging-fstring-interpolation", # f-strings are faster
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-return",
    "no-member",
    "no-self-argument",
    "no-self-use",
    "redefined-builtin",
    "too-few-public-methods",
    "unused-argument",
    "abstract-method",
    "arguments-differ",
]

[tool.pylint.similarities]
# Minimum lines number of a similarity.
min-similarity-lines = 5
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.isort]
src_paths = ["fourierflow"]
