[tool.poetry]
name = "fourierflow"
version = "0.3.0"
description = "Experiments with Fourier layers on simulation data."
authors = ["Alasdair Tran <alasdair.tran@anu.edu.au>"]
repository = "https://github.com/alasdairtran/fourierflow"

[tool.poetry.dependencies]
python = "~3.10.4"
# poetry add bokeh dask-cuda dm-haiku einops gdown gin-config \
#   graphviz h5netcdf hydra-core hyperopt ipykernel jupyterlab \
#   matplotlib numpy optax pandas plotly poethepoet ptvsd pydocstyle \
#   python-dotenv pytorch-lightning requests rich seaborn termcolor \
#   tfrecord torchdiffeq torchtyping typer wandb xarray
bokeh = "^2.4.3"
dask-cuda = "^22.4.0"
dm-haiku = "^0.0.6"
einops = "^0.4.1"
gdown = "^4.4.0"
gin-config = "^0.5.0"
graphviz = "^0.20"
h5netcdf = "^1.0.0"
hydra-core = "^1.2.0"
hyperopt = "^0.2.7"
ipykernel = "^6.13.0"
jax = "^0.3.13"
jax-cfd = {git = "https://github.com/google/jax-cfd.git", rev = "3bf2905f3c68ba9a572b287e96de41d531dd56d6"}
# Replace wheel URLs with versions once jaxlib is PEP 503 compliant:
# https://github.com/google/jax/issues/5410
jaxlib = [
    {url = "https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.3.10+cuda11.cudnn805-cp310-none-manylinux2014_x86_64.whl", markers = "sys_platform == 'linux'" },
    {url = "https://storage.googleapis.com/jax-releases/mac/jaxlib-0.3.10-cp310-none-macosx_10_9_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'" },
    {url = "https://storage.googleapis.com/jax-releases/mac/jaxlib-0.3.10-cp310-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
]
jupyterlab = "^3.4.2"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
optax = "^0.1.2"
pandas = "^1.4.2"
plotly = "^5.8.0"
poethepoet = "^0.13.1"
ptvsd = "^4.3.2"
pydocstyle = "^6.1.1"
python-dotenv = "^0.20.0"
pytorch-lightning = "^1.6.3"
requests = "^2.27.1"
rich = "^12.4.4"
seaborn = "^0.11.2"
tensorflow = { version = "^2.9.1", markers = "sys_platform == 'darwin'" }
tensorflow-gpu = { version = "^2.9.1", markers = "sys_platform == 'win32' or sys_platform == 'linux'" }
termcolor = "^1.1.0"
tfrecord = "^1.14.1"
# Note that we need to specify the exact version of pytorch, otherwise
# torch-1.11.0+rocm will be installed instead :-/
torch = [
    {version = "1.11.0+cu115", source = "torch", markers = "sys_platform == 'linux' or sys_platform == 'win32'"},
    {url = "https://download.pytorch.org/whl/cpu/torch-1.11.0-cp310-none-macosx_10_9_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"},
    {url = "https://download.pytorch.org/whl/cpu/torch-1.11.0-cp310-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
]
torchdiffeq = "^0.2.3"
torchtyping = "^0.1.4"
typer = "^0.4.1"
wandb = "^0.12.17"
xarray = "^2022.3.0"

[tool.poetry.group.dev.dependencies]
# poetry add --group dev autopep8 ipympl isort mypy pylint pytest types-requests
autopep8 = "^1.6.0"
ipympl = "^0.8.8"
isort = "^5.10.1"
mypy = "^0.941"
pylint = "^2.12.2"
pytest = "^7.1.1"
types-requests = "^2.27.14"

# Remove once pytorch is PEP 503 compliant:
# https://github.com/pytorch/pytorch/issues/25639#issuecomment-946224563
[[tool.poetry.source]]
name = "torch"
url = "https://eternalphane.github.io/pytorch-pypi/"
default = false
secondary = false

[tool.poetry.scripts]
fourierflow = 'fourierflow.commands.__main__:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint.messages_control]
disable = [
    "cyclic-import", # disabled until https://github.com/PyCQA/pylint/issues/3525 is fixed
    "invalid-name",
    "logging-fstring-interpolation", # f-strings are faster
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-return",
    "no-member",
    "no-self-argument",
    "no-self-use",
    "redefined-builtin",
    "too-few-public-methods",
    "unused-argument",
    "abstract-method",
    "arguments-differ",
]

[tool.pylint.similarities]
# Minimum lines number of a similarity.
min-similarity-lines = 5
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.isort]
src_paths = ["fourierflow"]
