[tool.poetry]
name = "meshgraphnets"
version = "0.1.0"
description = "Mesgraphnet experiments copied from DeepMind repo"
authors = []
repository = "https://github.com/alasdairtran/fourierflow/meshgraphnets"

[tool.poetry.dependencies]
python = "^3.6.14"
tensorflow-gpu = ">=1.15,<2"
dm-sonnet = "<2"
matplotlib = "^3.3.4"
numpy = "^1.18.5"
absl-py = "^0.13.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
